Fix #1419: blurry text preview on Chrome

--- a/src/scss/jsoneditor/_contextmenu.scss
+++ b/src/scss/jsoneditor/_contextmenu.scss
@@ -408,6 +408,12 @@
   border-radius: 3px;
   padding: 4px;
 }
+.jsoneditor-modal textarea {
+  // workaround for a bug on Chrome resulting in blurry text,
+  // see https://github.com/josdejong/jsoneditor/issues/1419
+  border-radius: unset;
+}
+
 .jsoneditor-modal,
 .jsoneditor-modal table td,
 .jsoneditor-modal table th,
